--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="marrom_claro">#FFE4C4</color>color>
-    <color name="vermelho">#DA0B23</color>color>
+    <color name="cinza">#8A8787</color>
 
 </resources>
