--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -102,7 +102,7 @@
             android:textSize="10sp" />
 
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/txt_cadastre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="48dp"
